# chest-xray-disease-classifier

./: .gitignore  .gitignore_hf  CLAUDE.md  DEPLOY.md  Dockerfile  GEMINI.md  README.md  README_HF.md  README_attention.md  app.py  deploy.py  deploy.sh  download_and_train.sh  download_dataset.py  main.py  predict.py  push_to_hf.py  pyproject.toml  requirements_hf.txt  start.sh  streamlit_app.py  train.py
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.qwen/: settings.json
.streamlit/: config.toml
configs/: attention_config.yaml  experiment_config.yaml
docs/: ATTENTION_DESIGN.md  ATTENTION_TODO.md  EXPERIMENT_PROTOCOL.md  KAGGLE_MCP_COMPLETE.md  KAGGLE_MCP_SETUP.md  KAGGLE_TRAINING_GUIDE.md  RESULTS_ANALYSIS.md
notebooks/: 01_data_exploration.ipynb  02_attention_comparison.ipynb  03_tb_sensitivity_analysis.ipynb  kaggle_train_all_models.ipynb  kaggle_train_attention.ipynb  kaggle_train_standalone.ipynb  kernel-metadata.json
scripts/: compare_results.py  evaluate_models.py  push_to_kaggle.py  push_to_kaggle.sh  test_kaggle_mcp.py  train_all_models.sh  visualize_attention.py  visualize_results.py
src/: __init__.py
src/classifier/: __init__.py
src/classifier/data/: dataset.py
src/classifier/models/: __init__.py  attention.py  attention_models.py
src/models/: __init__.py  model.py
src/utils/: training.py
